# demand-forecasting-dbx-genie

./: .gitignore  LICENSE  PROMPT_TEMPLATE.md  README.md  app.py  app.yaml  genie-space-generator-prompt.md  pyproject.toml  requirements.txt  setup_notebook.py
.github/workflows/: ci.yml
demand_forecasting_genie/: __init__.py  cleanup.py  config.py  data.py  deploy.py  genie.py  results.py  validators.py
examples/: quickstart.py
genie_space_generator/: __init__.py  config.py  data.py  generator.py  genie.py  results.py  validators.py
tests/: e2e_test.py  test_package.py
