[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "demand-forecasting-genie"
version = "0.1.2"
description = "One-command deployment of a Databricks Genie space for logistics demand forecasting & inventory management"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [
    {name = "Chad Macumber", email = "chad.macumber@databricks.com"}
]
keywords = ["databricks", "genie", "demand-forecasting", "logistics", "supply-chain"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Database",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "requests",
]

[project.urls]
Homepage = "https://github.com/chad-macumber_data/demand-forecasting"
Repository = "https://github.com/chad-macumber_data/demand-forecasting"

[tool.setuptools.packages.find]
include = ["demand_forecasting_genie*"]
