[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "genie-space-generator"
version = "1.0.0"
description = "Generate a fully-configured Databricks Genie space for any industry and use case"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
authors = [
    {name = "Chad Macumber", email = "cm.macumber@gmail.com"}
]
keywords = ["databricks", "genie", "synthetic-data", "metric-views", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Database",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = ["mlflow>=2.0"]

[project.urls]
Homepage = "https://github.com/macumberc/demand-forecasting-dbx-genie"
Repository = "https://github.com/macumberc/demand-forecasting-dbx-genie"

[tool.setuptools.packages.find]
include = ["genie_space_generator*"]
